added db config and git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/PrihApi/v15
+/PrihApi/obj/Debug/netcoreapp2.0
