--- a/PrihApi/appsettings.json
+++ b/PrihApi/appsettings.json
@@ -1,8 +1,24 @@
 ﻿{
   "Logging": {
     "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
     }
+  },
+  "dbconfig": {
+    "prihconnectionstring": "Server=tcp:cfgbotsdb.database.windows.net,1433;Initial Catalog=BotsDS;Persist Security Info=False;User ID=cristiano939;Password=9Smith3War9;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+  },
+  "gmapsconfig": {
+    "staticmapuri": "https://maps.googleapis.com/maps/api/staticmap?center={0},{1}8&zoom=15&size=400x400&markers=color:red%7Clabel:S%7C{0},{1}8&key=AIzaSyBkkwQHxi1efjwH2g7VBZnuWN3LhzIMdtM",
+    "mapsdir": "https://www.google.com/maps/dir/?api=1&origin={0},{1}&destination={2},{3}",
+    "geocodingurl": "https://maps.googleapis.com/maps/api/geocode/json?address={0}&key=AIzaSyBkkwQHxi1efjwH2g7VBZnuWN3LhzIMdtM"
   }
 }
