--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /.vs/PrihApi/v15
 /PrihApi/obj/Debug/netcoreapp2.0
+/.vs/config/applicationhost.config
+/PrihApi/bin/Debug/netcoreapp2.0
+/PrihApi/obj
