--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@
 /PrihApi/obj/Debug/netcoreapp2.0
 /.vs/config/applicationhost.config
 /PrihApi/bin/Debug/netcoreapp2.0
-/PrihApi/obj
+/.vs/PrihApi/DesignTimeBuild
